--- a/app/src/main/res/layout-land/activity_main_horizontal.xml
+++ b/app/src/main/res/layout-land/activity_main_horizontal.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-    
+    tools:context=".MainActivity"
+    tools:ignore="MissingDefaultResource">
+
     <TextView
         android:id="@+id/TextHello"
         android:layout_width="wrap_content"
