--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="hex">#191926</color>
+    <color name="someWhite">#ECECEC</color>
+   <color name="someGray">#6D6D80</color>
+    <color name="genre_color">#FF3466</color>
+    <color name="nameactor_color">#D8D8D8</color>
+
 </resources>
