--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="hex">#191926</color>
+    <color name="gray_time">#565665</color>
     <color name="someWhite">#ECECEC</color>
    <color name="someGray">#6D6D80</color>
     <color name="genre_color">#FF3466</color>
